UI Update : Fixed alignment. Added navigation bar to act as settings window. HTML upgrades. Button fixes. Inclusion of new event creation system.

--- a/btn_toggle/btn_toggle.css
+++ b/btn_toggle/btn_toggle.css
@@ -17,8 +17,8 @@ Notes :
   background-color:#ffffff;
   border:1px solid #ccc;
   border-radius:15px;
-  height:20px;
-  width:40px;
+  height:22px;
+  width:44px;
   transition:0.2s;
 }
 
@@ -32,8 +32,8 @@ Notes :
   border:1px solid #ddd;
   border-radius:100%;
   box-shadow:0px 0px 3px 0px #666;
-  height:14px;
-  width:14px;
+  height:16px;
+  width:16px;
   margin:2px 2px 0px 2px;
   float:left;
   transition:0.2s;
@@ -47,10 +47,9 @@ Notes :
 .btn_inner > div {
   display:block;
   color:#333;
-  font-size:12px;
+  font-size:11px;
   text-align:center;
-  margin-top:.5px;
-  margin-left:.5px;
+  margin:2px 0px 0px 0px;
   opacity:0;
   transition:0.4s;
 }
