--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,31 +12,19 @@ body {
 }
 
 .wrapper {
-  display:block;
-  height:100%;
-  min-height:100%;
-  width:600px;
-  position:absolute;
-  padding:0;
-  top:0px;
-  left:342.5px;
-  z-index:1;
-}
-
-.sub_wrapper {
   display:grid;
-  grid-template-columns:300px 40px 1fr 40px 300px;
+  grid-template-columns:340px 1fr 340px;
   grid-template-rows:auto;
   grid-template-areas:
-    ". btn_left . btn_right date_header";
+    ". date_view date_header";
   height:100%;
   min-height:100%;
   width:100%;
-  position:fixed;
+  position:absolute;
   top:0px;
+  left:0px;
   margin:0;
   padding:0;
-  z-index:0;
 }
 
 .date_header {
@@ -52,7 +40,7 @@ body {
 .dayname, .date_text {
   color:#333;
   text-align:right;
-  font-size:24px;
+  font-size:28px;
   padding:0.6em 0.6em 0 0;
 }
 .date_view {
@@ -60,6 +48,7 @@ body {
   height:100%;
   min-height:100%;
   padding:0;
+  grid-area:date_view;
 }
 
 .t_block:first-of-type {
@@ -69,7 +58,6 @@ body {
 
 .t_block {
   display:block;
-  height:50px;
   width:100%;
   min-width:300px;
   margin:0;
@@ -86,7 +74,7 @@ body {
 }
 
 .time {
-  padding-top:15px;
+  padding-top:10px;
 }
 
 button:hover {
@@ -111,4 +99,41 @@ button:hover {
   cursor:pointer;
   color:lightblue;
   transition:0.4s;
+}
+
+.settings:hover {
+  cursor:pointer;
+  color:lightblue;
+  transition:0.4s;
+}
+
+.options_toolbar {
+  display:block;
+  height:100%;
+  min-height:100%;
+  width:300px;
+  background-color:#ffffff;
+  position:fixed;
+  padding:0;
+  margin:0;
+  top:0px;
+}
+
+.options_toolbar > div {
+  padding:0.5em;
+}
+
+.options_toolbar > div:first-child:hover {
+  cursor:pointer;
+  color:lightblue;
+  transition:0.4s;
+}
+
+#navbar {
+  left:-300px;
+  transition:0.4s;
+  z-index:2;
+}
+#navbar > div {
+  padding:20px;
 }
